# diarization

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  environment.yml  modal_app.py  pyproject.toml
config/: default.yaml  modal-diarizen-elevenlabs.yaml  modal-diarizen-parakeet-1.1b.yaml  modal-diarizen-parakeet.yaml  modal-diarizen-whisper-hardrefs.yaml  modal-diarizen-whisper.yaml  whisper-base.yaml  whisper-large-compare.yaml
docs/: architecture.md
scripts/: debug_parakeet_payload.py  download_models.py  extract_hard_sections.py  inspect_parakeet_payload.py  make_fixture.py
src/diarizer/: cli.py  pipeline.py  schemas.py
src/diarizer/engines/: base.py  elevenlabs_scribe.py  mlx_whisper.py  modal_engines.py  modal_remote.py  sherpa_onnx.py
src/diarizer/io/: audio.py  output.py  rttm.py
src/diarizer/stages/: align.py  asr.py  cluster.py  embed.py  segment.py  vad.py
tests/: test_config.py  test_io.py  test_modal_remote.py  test_pipeline.py  test_stages.py
tests/fixtures/: 2speaker_clean_30s.rttm
